--- a/publication.htm
+++ b/publication.htm
@@ -140,11 +140,6 @@ function myFunction() {
 <h3><font color="#002F6C">Recent Preprints</font></h3>
 * indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2023.06.18.545510v1" target="_blank">Spatially clustered pattern of transcription factor binding reveals phase-separated transcriptional condensates at super-enhancers</a><br>
-<u>Zhenjia Wang</u>, <u>Shengyuan Wang</u>, <u>Chongzhi Zang</u>
-<br>
-<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2023.06.18.545510" target="_blank">https://doi.org/10.1101/2023.06.18.545510</a> (2023); <i><b>Nucleic Acids Research</b></i>, in press (2025)
-</p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2024.12.18.629220v1" target="_blank">Regulation of epigenetics and chromosome structure by human ORC2</a><br>
 Zhangli Su*, <u>Mengxue Tian</u>*, Etsuko Shibata, Yoshiyuki Shibata, Tianyi Yang, <u>Zhenjia Wang</u>, Fulai Jin, <u>Chongzhi Zang</u><sup>#</sup>, Anindya Dutta<sup>#</sup>
 <br>
@@ -160,6 +155,16 @@ Yubao Cheng, Mengwei Hu, Bing Yang, Tyler B. Jensen, Tianqi Yang, Ruihuan Yu, <u
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://academic.oup.com/nar/article/53/3/gkaf015/7979041" target="_blank">Genomic clustering tendency of transcription factors reflects phase-separated transcriptional condensates at super-enhancers</a><br>
+<u>Shengyuan Wang</u>*, <u>Zhenjia Wang</u>*, <u>Chongzhi Zang</u>
+<br>
+<i><b>Nucleic Acids Research</b></i> 53, gkaf015 (2025)
+</p></li>
+<li><p><a href="https://doi.org/10.1016/j.csbj.2025.01.018" target="_blank">IGN: Invariable gene set-based normalization for chromatin accessibility profile data analysis</a><br>
+<u>Shengen Shawn Hu</u><sup>#</sup>, Hai-Hui Xue, <u>Chongzhi Zang</u><sup>#</sup>
+<br>
+<i><b>Computational and Structural Biotechnology Journal</b></i>, https://doi.org/10.1016/j.csbj.2025.01.018 (2025)
+</p></li>
 <li><p><a href="https://www.nature.com/articles/s41586-024-07926-8" target="_blank">An aberrant immune–epithelial progenitor niche drives viral lung sequelae</a><br>
 Harish Narasimhan*, In Su Cheon*, Wei Qian*, <u>Shengen Shawn Hu</u>*, Tanyalak Parimon*, Chaofan Li, Nick Goplen, Yue Wu, Xiaoqin Wei, Young Min Son, Elizabeth Fink, Gislane de Almeida Santos, Jinyi Tang, Changfu Yao, Lyndsey Muehling, Glenda Canderan, Alexandra Kadl, Abigail Cannon, Samuel Young, Riley Hannan, Grace Bingham, Mohammed Arish, Arka Sen Chaudhari, Jun sub Im, Cameron L. R. Mattingly, Patcharin Pramoonjago, Alberto Marchesvsky, Jeffrey Sturek, Jacob E. Kohlmeier, Yun Michael Shim, Judith Woodfolk, <u>Chongzhi Zang</u><sup>#</sup>, Peter Chen<sup>#</sup>, Jie Sun<sup>#</sup>
 <br>
@@ -169,6 +174,11 @@ Harish Narasimhan*, In Su Cheon*, Wei Qian*, <u>Shengen Shawn Hu</u>*, Tanyalak 
 Yen T.M. Nguyen, Lydia Sibley*, Piotr Przanowski*, Xiao-Yu Zhao*, Michael Kovacs, <u>Shengyuan Wang</u>, Marieke K. Jones, Maureen Cowan, Wenjie Liu, Andrea R. Merchak, Alban Gaultier, Kevin Janes, <u>Chongzhi Zang</u>, Tajie Harris, Sarah E. Ewald<sup>#</sup>, Hui Zong<sup>#</sup>
 <br>
 <i><b>Journal of Neuroimmunology</b></i> 393, 578402 (2024)
+</p></li>
+<li><p><a href="https://www.nature.com/articles/s41467-024-45966-w" target="_blank">The impact of exercise on gene regulation in association with complex trait genetics</a><br>
+Nikolai G. Vetr<sup>#</sup>, Nicole R. Gay, MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>), Stephen B. Montgomery<sup>#</sup>
+<br>
+<i><b>Nature Communications</b></i> 15, 3346 (2024)
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41586-023-06877-w" target="_blank">Temporal dynamics of the multi-omic response to endurance exercise training</a><br>
 MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
@@ -360,7 +370,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="42">
+<ol style="padding-left: 24px; line-height: 1.6;" start="45">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -480,7 +490,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: January 14, 2025</p>
+<p align="right">Last modified: January 26, 2025</p>
 </div>
 
 <script>
