--- a/index.htm
+++ b/index.htm
@@ -169,7 +169,9 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Zhenjia and Shengyuan's paper on genomic features of transcriptional condensates is accepted to <i><b>Nucleic Acids Research</b></i>!
+		Zhenjia and Shengyuan's paper on genomic features of transcriptional condensates is published in <a href="https://academic.oup.com/nar/article/53/3/gkaf015/7979041" target="_blank"><i><b>Nucleic Acids Research</b></i></a>!
+		<br><br>
+		Shawn's paper on the IGN normalization method is published in <a href="https://doi.org/10.1016/j.csbj.2025.01.018" target="_blank"><i><b>Computational and Structural Biotechnology Journal</b></i></a>!
 		<br><br>
 		The lab welcomes BIMS rotation students Sophie O'Keefe and Bhummanat Sittipongpittaya!
 		</p>
@@ -1156,7 +1158,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: January 3, 2025</p>
+<p align="right">Last modified: January 26, 2025</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
