--- a/publication.htm
+++ b/publication.htm
@@ -163,7 +163,7 @@ Yubao Cheng, Mengwei Hu, Bing Yang, Tyler B. Jensen, Tianqi Yang, Ruihuan Yu, <u
 <li><p><a href="https://doi.org/10.1016/j.csbj.2025.01.018" target="_blank">IGN: Invariable gene set-based normalization for chromatin accessibility profile data analysis</a><br>
 <u>Shengen Shawn Hu</u><sup>#</sup>, Hai-Hui Xue, <u>Chongzhi Zang</u><sup>#</sup>
 <br>
-<i><b>Computational and Structural Biotechnology Journal</b></i>, https://doi.org/10.1016/j.csbj.2025.01.018 (2025)
+<i><b>Computational and Structural Biotechnology Journal</b></i> 27, 501&ndash;507 (2025)
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41586-024-07926-8" target="_blank">An aberrant immune–epithelial progenitor niche drives viral lung sequelae</a><br>
 Harish Narasimhan*, In Su Cheon*, Wei Qian*, <u>Shengen Shawn Hu</u>*, Tanyalak Parimon*, Chaofan Li, Nick Goplen, Yue Wu, Xiaoqin Wei, Young Min Son, Elizabeth Fink, Gislane de Almeida Santos, Jinyi Tang, Changfu Yao, Lyndsey Muehling, Glenda Canderan, Alexandra Kadl, Abigail Cannon, Samuel Young, Riley Hannan, Grace Bingham, Mohammed Arish, Arka Sen Chaudhari, Jun sub Im, Cameron L. R. Mattingly, Patcharin Pramoonjago, Alberto Marchesvsky, Jeffrey Sturek, Jacob E. Kohlmeier, Yun Michael Shim, Judith Woodfolk, <u>Chongzhi Zang</u><sup>#</sup>, Peter Chen<sup>#</sup>, Jie Sun<sup>#</sup>
@@ -490,7 +490,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: January 26, 2025</p>
+<p align="right">Last modified: January 28, 2025</p>
 </div>
 
 <script>
