--- a/teaching.htm
+++ b/teaching.htm
@@ -125,25 +125,25 @@ ul.topnav li.icon {display: none;}
 
 <h2 align="center"><font color="#002F6C">Teaching</font></h2>
 <hr>
+<h3><font color="#002F6C">COBI 8201/8202 / BIMS 8701/8702: Introduction to Computational Biology I/II</font></h3>
+<p style="line-height: 1.6;">
+<a href="https://uvacobi.github.io/compbio2025/" target="_blank">Spring 2025: Course website</a>
+</p>
+<p style="text-indent:100px; line-height: 1.6;">
+	Lecture 2: Statistics review. <a href="https://youtu.be/s5cbT41It2o" target="_blank">[Video]</a> <a href="slides/COBI8201_2_Statistics_review.pdf" target="_blank">[Slides]</a>
+</p>
+<p style="text-indent:100px; line-height: 1.6;">
+	Lecture 11: Transcription factors. <a href="slides/BIMS8701_11_Transcription_factors.pdf" target="_blank">[Slides]</a></p>
+<p style="text-indent:100px; line-height: 1.6;">
+	Lecture 14: Dimensionality reduction. <a href="slides/BIMS8701_14_Dimensionality_reduction.pdf" target="_blank">[Slides]</a>
+</p>
+<hr>
 <h3><a href="https://med.virginia.edu/bims/bims-courses/bims-6000-core-course-in-integrative-biosciences/" target="_blank"><font color="#002F6C">BIMS 6000: Core Course in Integrative Biosciences</font></a></h3>
 <p style="line-height: 1.6;">
 	Fall 2024 Lecture: Visualization and interpretation of high-throughput genomics data. <a href="https://youtu.be/ldpmgqn1p5k" target="_blank">[Video]</a> <a href="slides/data_visualization_2024.pdf" target="_blank">[Slides]</a>
 </p>
 <p style="line-height: 1.6;">
 	Fall 2023 Lecture: Visualization and interpretation of high-throughput genomics data. <a href="slides/data_visualization_2023.pdf" target="_blank">[Slides]</a>
-</p>
-<hr>
-<h3><font color="#002F6C">BIMS 8701/8702: Introduction to Computational Biology I/II</font></h3>
-<p style="line-height: 1.6;">
-<a href="https://cphg.github.io/compbio/" target="_blank">Spring 2024: Course website</a>
-</p>
-<p style="text-indent:100px; line-height: 1.6;">
-	Lecture 2: Statistics review. <a href="slides/BIMS8701_2_Statistics_review.pdf" target="_blank">[Slides]</a>
-</p>
-<p style="text-indent:100px; line-height: 1.6;">
-	Lecture 11: Transcription factors. <a href="slides/BIMS8701_11_Transcription_factors.pdf" target="_blank">[Slides]</a></p>
-<p style="text-indent:100px; line-height: 1.6;">
-	Lecture 14: Dimensionality reduction. <a href="slides/BIMS8701_14_Dimensionality_reduction.pdf" target="_blank">[Slides]</a>
 </p>
 <hr>
 <h3><font color="#002F6C">BIMS 8601: Foundations of Computational Genomics</font></h3>
@@ -218,7 +218,7 @@ ul.topnav li.icon {display: none;}
 	</div>
 </div>
 <hr>
-<p align="right">Last modified: September 5, 2024</p>
+<p align="right">Last modified: February 12, 2025</p>
 </div>
 
 <script>
