--- a/software.htm
+++ b/software.htm
@@ -102,6 +102,12 @@ ul.topnav li.icon {display: none;}
 </p></td>
 </tr>
 <tr>
+<td style="width:120px; height:120px"><a href="https://github.com/zang-lab/IGN" target="_blank"><img src="images/ign_logo.jpg" style="width:100px"></a></td>
+<td><p>
+<b><a href="https://github.com/zang-lab/IGN" target="_blank">IGN</a></b> (<u>I</u>nvariable <u>G</u>ene <u>N</u>ormalization), a computational method for chromatin profiling data normalization based on a set of unchanged genes. [<a href="https://github.com/zang-lab/IGN" target="_blank">Package</a>] [<a href="https://doi.org/10.1016/j.csbj.2025.01.018" target="_blank">Publication</a>]
+</p></td>
+</tr>
+<tr>
 <td style="width:120px; height:120px"><a href="http://cistrome.org/MARGE/" target="_blank"><img src="images/marge_logo.jpg" style="width:100px"></a></td>
 <td><p>
 <b><a href="http://cistrome.org/MARGE/" target="_blank">MARGE</a></b> (<u>M</u>odel-based <u>A</u>nalysis of <u>R</u>egulation of <u>G</u>ene <u>E</u>xpression), a comprehensive computational method for inference of cis-regulation of gene expression leveraging public H3K27ac genomic profiles in human or mouse. [<a href="http://cistrome.org/MARGE/" target="_blank">Package</a>] [<a href="http://genome.cshlp.org/content/26/10/1417" target="_blank">Publication</a>]
@@ -146,7 +152,7 @@ ul.topnav li.icon {display: none;}
 </tr>
 </table>
 <hr>
-<p align="right">Last modified: July 24, 2024</p>
+<p align="right">Last modified: February 12, 2025</p>
 </div>
 
 </body></html>
