--- a/position.htm
+++ b/position.htm
@@ -176,9 +176,7 @@ At least one peer-reviewed publication written in English in the previous area o
 </p><p style="line-height: 1.6;">
 To <a href="https://jobs.virginia.edu/us/en/job/R0066281" target="_blank">apply online</a>, please click <a href="https://jobs.virginia.edu/us/en/job/R0066281" target="_blank">here</a> and submit a complete application in the system. Meanwhile, interested applicants can send a complete CV and the contact information for three references to <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> with subject line "Postdoc Application". The position will remain open until all positions are filled.
 </p><p style="line-height: 1.6;">
-All positions are restricted and contingent on the continuation of funding. The University of Virginia is an equal opportunity and affirmative action employer. Women, minorities, veterans and persons with disabilities are strongly encouraged to apply.
-</p><p style="line-height: 1.6;">
-For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
+All positions are restricted and contingent on the continuation of funding. For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
 </p>
 </div>
 <hr>
@@ -222,9 +220,7 @@ Understanding the synergy of computational and experimental research and commitm
 </p><p style="line-height: 1.6;">
 To <a href="https://jobs.virginia.edu/us/en/job/R0066281" target="_blank">apply online</a>, please click <a href="https://jobs.virginia.edu/us/en/job/R0066281" target="_blank">here</a> and submit a complete application in the system. Meanwhile, interested applicants can send a complete CV and the contact information for three references to <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> with subject line "Postdoc Application". The position will remain open until filled.
 </p><p style="line-height: 1.6;">
-All positions are restricted and contingent on the continuation of funding. The University of Virginia is an equal opportunity and affirmative action employer. Women, minorities, veterans and persons with disabilities are strongly encouraged to apply.
-</p><p style="line-height: 1.6;">
-For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
+All positions are restricted and contingent on the continuation of funding. For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
 </p>
 </div>
 <hr>
@@ -359,7 +355,7 @@ Take a look at these two videos about why we are excited to be part of the UVA c
 <a href="https://news.virginia.edu/video/charlottesville" target="_blank">"This is Charlottesville."</a>
 </p>
 <hr>
-<p align="right">Last modified: October 24, 2024</p>
+<p align="right">Last modified: February 18, 2025</p>
 </div>
 
 <script>
