--- a/people.htm
+++ b/people.htm
@@ -306,14 +306,14 @@ Jingyi Wang is a PhD student in the Biomedical Sciences (BIMS) program. She comp
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Bhummanat Sittipongpittaya is a PhD student in the Biomedical Sciences (BIMS) program. He received his M.S. in Biomedical Engineering from Case Western Reserve University in 2024. He is interested in bioinformatics tools development and computational approaches to address biological questions.
 </p><br><br><br>
-<p style="line-height: 1.6;">
+<!--<p style="line-height: 1.6;">
 <img align="right" src="images/sophie_okeefe.jpg" style="width:180px">
 <b>Sophie O'Keefe</b>
 <a href="mailto:ugp9ke@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Sophie O’Keefe is a PhD student in the Biomedical Sciences (BIMS) program. Prior to joining UVA, she received a B.S in Biology, with a focus in immunology, from the University of Chicago. She then worked as a research assistant at Columbia University studying the role of vascular immune cross-talk in the metastatic progression of pancreatic neuroendocrine tumors. She hopes to improve her computational modeling skills in the context of tumor immunology.
 </p><br><br>
-<!--<hr>
+<hr>
 <h3><font color="#002F6C">Research Assistant</font></h3>
 <p style="line-height: 1.6;">
 <img align="right" src="images/shiyu_jiang.jpg" style="width:180px">
@@ -430,6 +430,12 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 		<td>BA/MS in Statistics</td>
 		<td>09/2018&ndash;05/2019</td>
 		<td>Graduate Student in Computer Science, University of Pennsylvania</td>
+	</tr>
+	<tr>
+		<td><b>Sophie O'Keefe</b></td>
+		<td>PhD in Biomedical Sciences (BIMS) (Rotation)</td>
+		<td>01/2025&ndash;02/2025</td>
+		<td>PhD Student in BIMS, UVA</td>
 	</tr>
 	<tr>
 		<td><b>Jamel Simpson</b></td>
@@ -678,7 +684,7 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: December 14, 2024</p>
+<p align="right">Last modified: February 20, 2025</p>
 
 </div>
 
