--- a/index.htm
+++ b/index.htm
@@ -164,6 +164,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">February 2025</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Bhummanat Sittipongpittaya joins the lab after rotation. Welcome!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">January 2025</font>
 		</p>
 	</div>
@@ -1158,7 +1170,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: January 26, 2025</p>
+<p align="right">Last modified: February 20, 2025</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
