--- a/people.htm
+++ b/people.htm
@@ -154,6 +154,9 @@ function myFunction() {
 <div class="ism-slider" data-transition_type="fade" data-play_type="loop" id="home-slider">
   <ol>
     <li>
+      <img src="images/20250128.jpg">
+    </li>
+    <li>
       <img src="images/20241121.jpg">
     </li>
     <li>
