--- a/position.htm
+++ b/position.htm
@@ -140,13 +140,13 @@ We are recruiting motivated students and scholars to work on various topics in g
 </p>
 <hr>
 <button type="button" class="collapsible">
-<h3><font color="#002F6C">Postdoctoral Research Associates (Computational)</font></h3>
+<h3><font color="#002F6C">Postdoctoral Research Associate (Computational)</font></h3>
 </button>
 <div class="content">
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Description</b></font>
 </p><p style="line-height: 1.6;">
-Our lab is seeking to fill <b>Two</b> Postdoctoral Research Associate positions in the broad field of <b>bioinformatics and computational biology</b>. The research program in the lab focuses on developing computational methods for high-throughput genomics technologies and integrating computational and experimental approaches to study chromatin and gene regulation in mammalian cells and human disease systems. Current ongoing projects include: statistical modeling and advanced machine learning method development for transcriptional regulation prediction from multi-omics data; model-based algorithm development for single-cell epigenomics and spatial multi-omics data analysis; computational and experimental studies of chromatin regulation, transcriptional condensates, and phase separation; epigenetics and transcriptional regulation in human cancer and immune systems, etc. More information on research directions and recent publications can be found on the <a href="https://zanglab.github.io/">lab website</a>.
+Our lab is seeking to fill a Postdoctoral Research Associate position in the broad field of <b>bioinformatics and computational biology</b>. The research program in the lab focuses on developing computational methods for high-throughput genomics technologies and integrating computational and experimental approaches to study chromatin and gene regulation in mammalian cells and human disease systems. Current ongoing projects include: statistical modeling and advanced machine learning method development for transcriptional regulation prediction from multi-omics data; model-based algorithm development for single-cell epigenomics and spatial multi-omics data analysis; computational and experimental studies of chromatin regulation, transcriptional condensates, and phase separation; epigenetics and transcriptional regulation in human cancer and immune systems, etc. More information on research directions and recent publications can be found on the <a href="https://zanglab.github.io/">lab website</a>.
 </p><p style="line-height: 1.6;">
 The Zang Lab is well funded by NIH and other agencies. Each postdoctoral scientist in the lab will receive comprehensive and personalized training in research and career development, and will have extensive opportunities for independent and collaborative research. Based at the Department of Genome Sciences in UVA School of Medicine, the lab has established close collaborations with multiple groups in the field across the country.
 </p><p style="line-height: 1.6;">
@@ -180,7 +180,7 @@ All positions are restricted and contingent on the continuation of funding. For 
 </p>
 </div>
 <hr>
-<button type="button" class="collapsible">
+<!--<button type="button" class="collapsible">
 <h3><font color="#002F6C">Postdoctoral Research Associate (Experimental)</font></h3>
 </button>
 <div class="content">
@@ -224,7 +224,7 @@ All positions are restricted and contingent on the continuation of funding. For 
 </p>
 </div>
 <hr>
-<!--<button type="button" class="collapsible">
+<button type="button" class="collapsible">
 <h3><font color="#002F6C">Computational Biologist</font></h3>
 </button>
 <div class="content">
@@ -355,7 +355,7 @@ Take a look at these two videos about why we are excited to be part of the UVA c
 <a href="https://news.virginia.edu/video/charlottesville" target="_blank">"This is Charlottesville."</a>
 </p>
 <hr>
-<p align="right">Last modified: February 18, 2025</p>
+<p align="right">Last modified: March 20, 2025</p>
 </div>
 
 <script>
