--- a/people.htm
+++ b/people.htm
@@ -251,13 +251,6 @@ Dr. Sheng'en Shawn Hu is a Research Assistant Professor after completing his pos
 </p><br><br>
 <hr>
 <h3><font color="#002F6C">Postdoctoral Associates</font></h3>
-<!--<p style="line-height: 1.6;">
-<img align="right" src="images/qingying_chen.jpg" style="width:180px">
-<b>Qingying Chen, PhD</b>
-<a href="mailto:jkx9nz@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=u-N8u08AAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Qingying Chen joined the lab as a postdoctoral research associate in January 2021. She received her PhD in physics from the University of Tulsa and her B.S. in Applied Physics from Xi’an Jiaotong University in China. Her research focused on designing, simulating, and testing the interference filters for the phonic sensing, and developing coating techniques to functionalize the integrated sensing elements. She is interested in computational biology and excited to gain experience in bioinformatics research.
-</p><br><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/shengyuan_wang.jpg" style="width:180px">
 <b>Shengyuan Wang, PhD</b>
@@ -265,6 +258,20 @@ Qingying Chen joined the lab as a postdoctoral research associate in January 202
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Shengyuan Wang joined the lab as a postdoctoral research associate in March 2022. He received his PhD in Bioinformatics and Computational Biology from George Mason University, M.S. in Pharmaceutical Science from North Carolina Central University and B.S. in Biotechnology from China Agricultural University. His research interest lies in algorithm development in genomics data analysis to tackle biological problems.
 </p><br><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/ziyi_liu.jpg" style="width:180px">
+<b>Ziyi Liu, PhD</b>
+<!--<a href="mailto:jkx9nz@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>--> <a href="https://scholar.google.com/citations?user=TkPYrMsAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Ziyi Liu will join the lab as a postdoctoral research associate in April 2025. She earned her Ph.D. in Genome Science and Technology from the University of Tennessee, Knoxville in December 2024. She received her Bachelor’s degree in Physics from the Southern University of Science and Technology in China in June 2019. She is interested in developing computational methods to study epigenetics and transcriptional regulation in mammalian cell models and human diseases. She enjoys painting and aquariums.
+</p><br><br>
+<!--<p style="line-height: 1.6;">
+<img align="right" src="images/qingying_chen.jpg" style="width:180px">
+<b>Qingying Chen, PhD</b>
+<a href="mailto:jkx9nz@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=u-N8u08AAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Qingying Chen joined the lab as a postdoctoral research associate in January 2021. She received her PhD in physics from the University of Tulsa and her B.S. in Applied Physics from Xi’an Jiaotong University in China. Her research focused on designing, simulating, and testing the interference filters for the phonic sensing, and developing coating techniques to functionalize the integrated sensing elements. She is interested in computational biology and excited to gain experience in bioinformatics research.
+</p><br><br>-->
 <hr>
 <h3><font color="#002F6C">Graduate Students</font></h3>
 <p style="line-height: 1.6;">
@@ -687,7 +694,7 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: February 20, 2025</p>
+<p align="right">Last modified: March 20, 2025</p>
 
 </div>
 
