--- a/research.htm
+++ b/research.htm
@@ -186,9 +186,9 @@ Transcriptional regulators (TRs), including transcription factors and chromatin 
 <h3><font color="#002F6C">3. <i>Data-inspired modeling for functional epigenetics and transcriptional condensation</i></font></h2>
 <img align="right" src="images/ctcf.jpg" style="width:240px">
 <p style="width: 620px; line-height: 1.6;">
-Data-driven discovery has become a new paradigm in biological research. By analyzing the massive amount of data available in the public domain, we can uncover new patterns and relationships in biological entities that often remain hidden in individual datasets. By the integrative analysis of thousands of public omics datasets, we have recently identified a cancer-specific binding pattern of CTCF, an important DNA-binding protein, and have characterized its role in facilitating oncogenic transcriptional activation (<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-02152-7" target="_blank"><i>Genome Biol</i> 2020</a>). Inspired by the emerging evidence of liquid-liquid phase separation phenomena in gene regulation (e.g., <a href="https://www.nature.com/articles/s41586-021-03903-7" target="_blank"><i>Nature</i> 2021</a>), we aim to develop computational models to characterize transcriptional condensation events from multi-omics data. Our ultimate goal is to gain a deeper understanding of the molecular mechanisms underlying transcriptional regulation.<br>
+Data-driven discovery has become a new paradigm in biological research. By analyzing the massive amount of data available in the public domain, we can uncover new patterns and relationships in biological entities that often remain hidden in individual datasets. By the integrative analysis of thousands of public omics datasets, we have recently identified a cancer-specific binding pattern of CTCF, an important DNA-binding protein, and have characterized its role in facilitating oncogenic transcriptional activation (<a href="https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-02152-7" target="_blank"><i>Genome Biol</i> 2020</a>). Inspired by the emerging evidence of liquid-liquid phase separated biomolecular condensates (e.g., <a href="https://www.nature.com/articles/s41586-021-03903-7" target="_blank"><i>Nature</i> 2021</a>), we develop computational models to characterize transcriptional condensates from genomics data (<a href="https://academic.oup.com/nar/article/53/3/gkaf015/7979041" target="_blank"><i>Nucleic Acids Res</i> 2025</a>). Our ultimate goal is to gain a deeper understanding of the molecular mechanisms underlying transcriptional regulation.<br>
 </p>
-<br><br>
+<br>
 <hr>
 <h3><font color="#002F6C">Research Talks</font></h3>
 <p style="line-height: 1.6;">
@@ -271,7 +271,7 @@ Data-driven discovery has become a new paradigm in biological research. By analy
 </div>
 </div>
 <hr>
-<p align="right">Last modified: October 12, 2024</p>
+<p align="right">Last modified: March 28, 2025</p>
 
 </div>
 
