--- a/teaching.htm
+++ b/teaching.htm
@@ -139,6 +139,9 @@ ul.topnav li.icon {display: none;}
 </p>
 <hr>
 <h3><a href="https://med.virginia.edu/bims/bims-courses/bims-6000-core-course-in-integrative-biosciences/" target="_blank"><font color="#002F6C">BIMS 6000: Core Course in Integrative Biosciences</font></a></h3>
+<p align="center">
+<iframe width="800" height="450" src="https://www.youtube.com/embed/ldpmgqn1p5k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</p>
 <p style="line-height: 1.6;">
 	Fall 2024 Lecture: Visualization and interpretation of high-throughput genomics data. <a href="https://youtu.be/ldpmgqn1p5k" target="_blank">[Video]</a> <a href="slides/data_visualization_2024.pdf" target="_blank">[Slides]</a>
 </p>
@@ -146,17 +149,25 @@ ul.topnav li.icon {display: none;}
 	Fall 2023 Lecture: Visualization and interpretation of high-throughput genomics data. <a href="slides/data_visualization_2023.pdf" target="_blank">[Slides]</a>
 </p>
 <hr>
-<h3><font color="#002F6C">BIMS 8601: Foundations of Computational Genomics</font></h3>
+<h3><font color="#002F6C">UCLA Computational Genomics Summer Institute (CGSI)</font></h3>
 <p style="line-height: 1.6;">
-<a href="https://cphg.github.io/compgen/" target="_blank">Spring 2022: Course website</a>
+	2024 Tutorial: Epigenomics Data Analysis
 </p>
-<hr>
+<p align="center">
+<iframe width="800" height="450" src="https://www.youtube.com/embed/_l79NhYKYr4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</p>
+<br><hr>
 <h3><font color="#002F6C">BIOC 8014: Chromatin</font></h3>
 <p style="line-height: 1.6;">
 	Spring 2024 Lecture: Super-enhancers and transcriptional condensates. <a href="slides/BIOC8014_chromatinII_week5_20240423.pdf" target="_blank">[Slides]</a>
 </p>
 <p style="line-height: 1.6;">
 	Spring 2022 Lecture: Super-enhancers and transcriptional condensates. <a href="slides/BIOC8014_chromatinII_week6.pdf" target="_blank">[Slides]</a>
+</p>
+<hr>
+<h3><font color="#002F6C">BIMS 8601: Foundations of Computational Genomics</font></h3>
+<p style="line-height: 1.6;">
+<a href="https://cphg.github.io/compgen/" target="_blank">Spring 2022: Course website</a>
 </p>
 <hr>
 <h3><font color="#002F6C">BIOC 8145: Bioinformatics and Functional Analysis of Genomes</font></h3>
@@ -218,7 +229,7 @@ ul.topnav li.icon {display: none;}
 	</div>
 </div>
 <hr>
-<p align="right">Last modified: March 20, 2025</p>
+<p align="right">Last modified: March 28, 2025</p>
 </div>
 
 <script>
