--- a/people.htm
+++ b/people.htm
@@ -263,7 +263,7 @@ Shengyuan Wang joined the lab as a postdoctoral research associate in March 2022
 <b>Ziyi Liu, PhD</b>
 <!--<a href="mailto:jkx9nz@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>--> <a href="https://scholar.google.com/citations?user=TkPYrMsAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Ziyi Liu will join the lab as a postdoctoral research associate in April 2025. She earned her Ph.D. in Genome Science and Technology from the University of Tennessee, Knoxville in December 2024. She received her Bachelor’s degree in Physics from the Southern University of Science and Technology in China in June 2019. She is interested in developing computational methods to study epigenetics and transcriptional regulation in mammalian cell models and human diseases. She enjoys painting and aquariums.
+Ziyi Liu joined the lab as a postdoctoral research associate in April 2025. She earned her Ph.D. in Genome Science and Technology from the University of Tennessee, Knoxville in December 2024. She received her Bachelor’s degree in Physics from the Southern University of Science and Technology in China in June 2019. She is interested in developing computational methods to study epigenetics and transcriptional regulation in mammalian cell models and human diseases. She enjoys painting and aquariums.
 </p><br><br>
 <!--<p style="line-height: 1.6;">
 <img align="right" src="images/qingying_chen.jpg" style="width:180px">
