--- a/publication.htm
+++ b/publication.htm
@@ -145,16 +145,16 @@ Zhangli Su*, <u>Mengxue Tian</u>*, Etsuko Shibata, Yoshiyuki Shibata, Tianyi Yan
 <br>
 <b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2024.12.18.629220" target="_blank">https://doi.org/10.1101/2024.12.18.629220</a> (2024)
 </p></li>
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2023.01.31.525983v2" target="_blank">Perturb-tracing enables high-content screening of multiscale 3D genome regulators</a><br>
-Yubao Cheng, Mengwei Hu, Bing Yang, Tyler B. Jensen, Tianqi Yang, Ruihuan Yu, <u>Zhaoxia Ma</u>, Jonathan S. D. Radda, Shengyan Jin, <u>Chongzhi Zang</u>, Siyuan Wang
-<br>
-<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2023.01.31.525983" target="_blank">https://doi.org/10.1101/2023.01.31.525983</a> (2023)
-</p></li>
 </ol>
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.nature.com/articles/s41592-025-02652-z" target="_blank">Perturb-tracing enables high-content screening of multi-scale 3D genome regulators</a><br>
+Yubao Cheng, Mengwei Hu, Bing Yang, Tyler B. Jensen, Yuan Zhang, Tianqi Yang, Ruihuan Yu, <u>Zhaoxia Ma</u>, Jonathan S. D. Radda, Shengyan Jin, <u>Chongzhi Zang</u>, Siyuan Wang
+<br>
+<i><b>Nature Methods</b></i>, doi: <a href="https://doi.org/10.1038/s41592-025-02652-z" target="_blank">https://doi.org/10.1038/s41592-025-02652-z</a> (2025)
+</p></li>
 <li><p><a href="https://academic.oup.com/nar/article/53/3/gkaf015/7979041" target="_blank">Genomic clustering tendency of transcription factors reflects phase-separated transcriptional condensates at super-enhancers</a><br>
 <u>Shengyuan Wang</u>*, <u>Zhenjia Wang</u>*, <u>Chongzhi Zang</u>
 <br>
@@ -370,7 +370,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="45">
+<ol style="padding-left: 24px; line-height: 1.6;" start="46">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -490,7 +490,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: January 28, 2025</p>
+<p align="right">Last modified: April 10, 2025</p>
 </div>
 
 <script>
