update bart index

--- a/bart/index.htm
+++ b/bart/index.htm
@@ -187,11 +187,11 @@
       installation.)
     </p>
     <p>
-      <a href="https://virginia.box.com/shared/static/46c0xgwgictb1hmhxhmwo641ym6nlcf5.gz">
+      <a href="https://virginia.box.com/shared/static/egiakoo0qd48j0yfackoayaimlyqwarf.bed">
         <font color="#002F6C">hg38 UDHS</font>
       </a>
       <br>
-      <a href="https://virginia.box.com/shared/static/s8dsgbxw76v63wkq4p8rkz3gshdcdgzp.gz">
+      <a href="https://virginia.box.com/shared/static/ua2xssposnytu01zots6u8nfsacpjdyc.bed">
         <font color="#002F6C">mm10 UDHS</font>
       </a>
       <br>
@@ -460,7 +460,7 @@ How long will it take to run an analysis? How much memory will it occupy?
       University of Virginia. Please <a href="mailto:zang@virginia.edu">email us</a> for any questions.
     </p>
     <hr>
-    <p align="right">Last modified: February 20, 2024</p>
+    <p align="right">Last modified: April 12, 2025</p>
   </div>
 
   <!-- Start of StatCounter Code for Default Guide -->
