--- a/people.htm
+++ b/people.htm
@@ -482,6 +482,12 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 		<th>Position after Leaving Lab</th>
 	</tr>
 	<tr>
+		<td><a href="https://jasonjiangs.github.io/" target="_blank"><b>Shiyu Jiang</b></a></td>
+		<td>MS in Computer Science, Johns Hopkins University</td>
+		<td>01/2024&ndash;07/2024</td>
+		<td>PhD Student in Computational Biology and Bioinformatics, University of Southern California</td>
+	</tr>
+	<tr>
 		<td><a href="https://marvinquiet.github.io/" target="_blank"><b>Wenjing Ma</b></a></td>
 		<td>MS in Computer Science, Beijing University of Posts and Telecommunications</td>
 		<td>08/2018&ndash;06/2019</td>
@@ -694,7 +700,7 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: March 20, 2025</p>
+<p align="right">Last modified: April 12, 2025</p>
 
 </div>
 
