--- a/teaching.htm
+++ b/teaching.htm
@@ -169,6 +169,20 @@ ul.topnav li.icon {display: none;}
 <p style="line-height: 1.6;">
 <a href="https://cphg.github.io/compgen/" target="_blank">Spring 2022: Course website</a>
 </p>
+<p style="text-indent:100px; line-height: 1.6;">
+	Lecture 1: Epigenomics: Transcription factor and sequence motif. <a href="slides/epigenomics1.pdf" target="_blank">[Slides]</a>
+</p>
+<p style="text-indent:100px; line-height: 1.6;">
+	Lecture 2: Epigenomics: ChIP-seq. <a href="slides/epigenomics2.pdf" target="_blank">[Slides]</a></p>
+<p style="text-indent:100px; line-height: 1.6;">
+	Lecture 3: Epigenomics: ChIP-seq, Hi-C, and 3D chromatin structure. <a href="slides/epigenomics3.pdf" target="_blank">[Slides]</a>
+</p>
+<p style="text-indent:100px; line-height: 1.6;">
+	Lecture 5: Transcriptomics: Spatial transcriptomics. <a href="slides/transcriptomics5.pdf" target="_blank">[Slides]</a>
+</p>
+<p style="text-indent:100px; line-height: 1.6;">
+	Lecture 6: Transcriptomics: Clustering, regulatory networks, and data integration. <a href="slides/transcriptomics6.pdf" target="_blank">[Slides]</a>
+</p>
 <hr>
 <h3><font color="#002F6C">BIOC 8145: Bioinformatics and Functional Analysis of Genomes</font></h3>
 <p style="line-height: 1.6;">Spring 2020: Module: Analysis of ChIP-seq data</p>
