--- a/index.htm
+++ b/index.htm
@@ -169,6 +169,10 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		<a href="https://www.abstractsonline.com/pp8/#!/20273/presentation/3431" target="_blank">Shengyuan</a>, <a href="https://www.abstractsonline.com/pp8/#!/20273/presentation/3521" target="_blank">Hongpan</a>, <a href="https://www.abstractsonline.com/pp8/#!/20273/presentation/3535" target="_blank">Zhaoxia</a>, and <a href="https://www.abstractsonline.com/pp8/#!/20273/presentation/9165" target="_blank">Kevin</a> each presents a poster at the 2025 AACR Annual Meeting in Chicago.
+		<br><br>
+		Jingyi gives an oral presentation, while Shengyuan, Mengxue, Zhaoxia, and Hongpan each presents a poster at the 1st Annual Genome Sciences Department Retreat. Great job, everyone!
+		<br><br>
 		Dr. Ziyi Liu joins the lab as a Postdoctoral Research Associate. Welcome Ziyi!
 		</p>
 	</div>
@@ -1194,7 +1198,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: April 12, 2025</p>
+<p align="right">Last modified: April 24, 2025</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
