--- a/people.htm
+++ b/people.htm
@@ -261,7 +261,7 @@ Shengyuan Wang joined the lab as a postdoctoral research associate in March 2022
 <p style="line-height: 1.6;">
 <img align="right" src="images/ziyi_liu.jpg" style="width:180px">
 <b>Ziyi Liu, PhD</b>
-<!--<a href="mailto:jkx9nz@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>--> <a href="https://scholar.google.com/citations?user=TkPYrMsAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
+<a href="mailto:qbv9ec@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=TkPYrMsAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Ziyi Liu joined the lab as a postdoctoral research associate in April 2025. She earned her Ph.D. in Genome Science and Technology from the University of Tennessee, Knoxville in December 2024. She received her Bachelor’s degree in Physics from the Southern University of Science and Technology in China in June 2019. She is interested in developing computational methods to study epigenetics and transcriptional regulation in mammalian cell models and human diseases. She enjoys painting and aquariums.
 </p><br><br>
@@ -305,7 +305,7 @@ Kevin is a medical student at UVA expected to graduate in 2026. He received his 
 <p style="line-height: 1.6;">
 <img align="right" src="images/jingyi_wang.jpg" style="width:180px">
 <b>Jingyi Wang</b>
-<a href="mailto:jw4xtu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+<a href="mailto:jw4xtu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=VvDac2IAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Jingyi Wang is a PhD student in the Biomedical Sciences (BIMS) program. She completed her undergraduate degree from UVA with a biochemistry major and a data analytics minor in 3 years. She joined the lab as a Second Year undergrad student and continued her PhD studies in the lab. She is interested in investigating genomics problems using computational approaches.
 </p><br><br><br>
@@ -387,28 +387,28 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 		<td><b>Qingying Chen, PhD</b></td>
 		<td>PhD in Physics, University of Tulsa</td>
 		<td>01/2021&ndash;06/2024</td>
-		<td>Research associate, UVA</td>
+		<td>Research Associate, UVA</td>
 	</tr>
 	<tr>
-		<td><b>Yidan Cong, PhD</b></td>
+		<td><a href="https://www.linkedin.com/in/yidan-cong/" target="_blank"><b>Yidan Cong, PhD</b></a></td>
 		<td>PhD in Chemistry, University of North Carolina at Chapel Hill</td>
 		<td>06/2021&ndash;02/2022</td>
 		<td>Machine Learning Engineer, Big Sur AI</td>
 	</tr>
 	<tr>
-		<td><b>Christopher Dampier, MD</b></td>
+		<td><a href="https://www.linkedin.com/in/chris-dampier-10b13b47/" target="_blank"><b>Christopher Dampier, MD</b></a></td>
 		<td>MD, University of Michigan;<br>General Surgery Residency, University of Virginia</td>
 		<td>07/2019&ndash;06/2021</td>
 		<td>Clinical Fellow, National Cancer Institute, NIH</td>
 	</tr>
 	<tr>
-		<td><b>William F. Lamberti, PhD</b></td>
+		<td><a href="https://www.billyflamberti.com/" target="_blank"><b>William F. Lamberti, PhD</b></td>
 		<td>PhD in Computational Sciences and Informatics, George Mason University</td>
 		<td>01/2021&ndash;08/2022</td>
 		<td>Assistant Professor, George Mason University</td>
 	</tr>
 	<tr>
-		<td><b>Zhenjia Wang, PhD</b></td>
+		<td><a href="https://www.linkedin.com/in/zhenjia-wang-72aa6253/" target="_blank"><b>Zhenjia Wang, PhD</b></a></td>
 		<td>PhD in Bioinformatics, Shandong University</td>
 		<td>01/2017&ndash;01/2024</td>
 		<td>Scientist, Foundation Medicine</td>
@@ -652,7 +652,7 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 		<td>Graduate Student in Biomedical Informatics, Columbia University</td>
 	</tr>
 	<tr>
-		<td><b>Ruoyao Shi</b></td>
+		<td><a href="https://scholar.google.com/citations?user=mA9V44kAAAAJ" target="_blank"><b>Ruoyao Shi</b></a></td>
 		<td>Undergraduate Student in Tao Aoqing Honors Program in Biology Science, Jilin University</td>
 		<td>10/2019&ndash;05/2020</td>
 		<td>PhD Student in Biostatistics, University of Michigan</td>
@@ -700,7 +700,7 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: April 12, 2025</p>
+<p align="right">Last modified: May 10, 2025</p>
 
 </div>
 
