--- a/publication.htm
+++ b/publication.htm
@@ -150,6 +150,11 @@ Zhangli Su*, <u>Mengxue Tian</u>*, Etsuko Shibata, Yoshiyuki Shibata, Tianyi Yan
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.pnas.org/doi/10.1073/pnas.2502256122" target="_blank">Hdac1 as an early determinant of intermediate-exhausted CD8<sup>+</sup> T cell fate in chronic viral infection</a><br>
+Wei Hu, <u>Shengen Shawn Hu</u>, Shaoqi Zhu, Weiqun Peng, Vladimir P. Badovinac, <u>Chongzhi Zang</u>, Xudong Zhao, Hai-Hui Xue
+<br>
+<i><b>Proceedings of the National Academy of Sciences USA</b></i> 122 (19), e2502256122 (2025)
+</p></li>
 <li><p><a href="https://www.nature.com/articles/s41592-025-02652-z" target="_blank">Perturb-tracing enables high-content screening of multi-scale 3D genome regulators</a><br>
 Yubao Cheng, Mengwei Hu, Bing Yang, Tyler B. Jensen, Yuan Zhang, Tianqi Yang, Ruihuan Yu, <u>Zhaoxia Ma</u>, Jonathan S. D. Radda, Shengyan Jin, <u>Chongzhi Zang</u>, Siyuan Wang
 <br>
@@ -370,7 +375,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="46">
+<ol style="padding-left: 24px; line-height: 1.6;" start="47">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -490,7 +495,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: April 10, 2025</p>
+<p align="right">Last modified: May 10, 2025</p>
 </div>
 
 <script>
