--- a/people.htm
+++ b/people.htm
@@ -123,9 +123,8 @@ ul.topnav li.icon {display: none;}
 </head>
 <body bgcolor="white" onload="update_modtime();">
 <div style="width: 900px; margin: auto;">
-<img align="left" width="170" src="UVA-med-3.jpg">
-<!--<img align="right" width="150" src="cphg_logo.jpg">-->
-<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></a></h2>
+<img align="right" width="180" src="uva_primary_rgb.png">
+<h2 style="font-size: 28pt" align="left"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab</font></a></h2>
 
 <ul class="topnav" id="myTopnav">
   <li><a href="index.htm">Home</a></li>
@@ -334,7 +333,7 @@ Shiyu Jiang joined the lab as a volunteer in January 2023 and became research as
 </p><br><br>-->
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
-<h4><font color="#002F6C">Class of 2025</font></h4>
+<!--<h4><font color="#002F6C">Class of 2025</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/andy_cao.jpg" style="width:180px">
 <b>Andy Cao</b>
@@ -348,7 +347,7 @@ Andy Cao is a Fourth Year undergraduate student (Class of 2025) planning to stud
 <a href="mailto:xzy8wd@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Yanbin Xu is a Fourth Year undergraduate student (Class of 2025) pursuing a double major in Neuroscience and Statistics. He is excited to develop and apply bioinformatics algorithms to study genomic problems and learn more about machine learning in precision medicine.
-</p><br><br><br>
+</p><br><br><br>-->
 <h4><font color="#002F6C">Class of 2026</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/grant_atwood.jpg" style="width:180px">
@@ -612,6 +611,12 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 		<td>PhD Student in Biomedical Engineering, University of Southern California</td>
 	</tr>
 	<tr>
+		<td><b>Yanbin Xu</b></td>
+		<td>Neuroscience and Statistics</td>
+		<td>10/2022&ndash;05/2025</td>
+		<td>PhD Student in Cognitive and Behavioral Neuroscience, University of Miami</td>
+	</tr>
+	<tr>
 		<td><a href="https://jinyongyoo.github.io/" target="_blank"><b>Jin Yong (Jeffrey) Yoo</b></a></td>
 		<td>Computer Science</td>
 		<td>02/2018&ndash;05/2020</td>
@@ -700,7 +705,7 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: May 10, 2025</p>
+<p align="right">Last modified: May 12, 2025</p>
 
 </div>
 
