--- a/publication.htm
+++ b/publication.htm
@@ -88,9 +88,8 @@ ul.topnav li.icon {display: none;}
 </head>
 <body bgcolor="white" onload="update_modtime();">
 <div style="width: 900px; margin: auto;">
-<img align="left" width="170" src="UVA-med-3.jpg">
-<!--<img align="right" width="150" src="cphg_logo.jpg">-->
-<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></a></h2>
+<img align="right" width="180" src="uva_primary_rgb.png">
+<h2 style="font-size: 28pt" align="left"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab</font></a></h2>
 
 <ul class="topnav" id="myTopnav">
   <li><a href="index.htm">Home</a></li>
@@ -495,7 +494,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: May 10, 2025</p>
+<p align="right">Last modified: May 12, 2025</p>
 </div>
 
 <script>
