--- a/contact.htm
+++ b/contact.htm
@@ -67,9 +67,8 @@ ul.topnav li.icon {display: none;}
 </head>
 <body bgcolor="white" onload="update_modtime();">
 <div style="width: 900px; margin: auto;">
-<img align="left" width="170" src="UVA-med-3.jpg">
-<!--<img align="right" width="150" src="cphg_logo.jpg">-->
-<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></a></h2>
+<img align="right" width="180" src="uva_primary_rgb.png">
+<h2 style="font-size: 28pt" align="left"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab</font></a></h2>
 
 <ul class="topnav" id="myTopnav">
   <li><a href="index.htm">Home</a></li>
@@ -144,10 +143,10 @@ Email: <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>
 <h4><a href="https://med.virginia.edu/cphg/" target="_blank" style="text-decoration:none;"><font color="#002F6C">Department of Genome Sciences</font></a></h3>
 <h4><a href="https://bmg.med.virginia.edu/" target="_blank" style="text-decoration:none;"><font color="#002F6C">Department of Biochemistry and Molecular Genetics</font></a></h3>
 <h4><a href="https://engineering.virginia.edu/departments/biomedical-engineering" target="_blank" style="text-decoration:none;"><font color="#002F6C">Department of Biomedical Engineering</font></a></h3>
-<h4><a href="https://uvahealth.com/services/cancer-research" target="_blank" style="text-decoration:none;"><font color="#002F6C">UVA Cancer Center</font></a></h3>
-<h4><a href="https://datascience.virginia.edu/" target="_blank" style="text-decoration:none;"><font color="#002F6C">School of Data Science</font></a></h3>
+<h4><a href="https://uvahealth.com/services/cancer-research" target="_blank" style="text-decoration:none;"><font color="#002F6C">UVA Comprehensive Cancer Center</font></a></h3>
+<!--<h4><a href="https://datascience.virginia.edu/" target="_blank" style="text-decoration:none;"><font color="#002F6C">School of Data Science</font></a></h3>-->
 <hr>
-<p align="right">Last modified: July 24, 2024</p>
+<p align="right">Last modified: May 12, 2025</p>
 </div>
 
 </body></html>
