--- a/index.htm
+++ b/index.htm
@@ -104,9 +104,8 @@ ul.topnav li.icon {display: none;}
 </head>
 <body bgcolor="white" onload="update_modtime();">
 <div style="width: 900px; margin: auto;">
-<img align="left" width="170" src="UVA-med-3.jpg">
-<!--<img align="right" width="150" src="cphg_logo.jpg">-->
-<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></a></h2>
+<img align="right" width="180" src="uva_primary_rgb.png">
+<h2 style="font-size: 28pt" align="left"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab</font></a></h2>
 
 <ul class="topnav" id="myTopnav">
   <li><a class="active" href="index.htm">Home</a></li>
@@ -161,6 +160,18 @@ function myFunction() {
 <br>
 <br>
 <h3><font color="#002F6C">Lab News</font></h3>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
+		<font color="#002F6C">May 2025</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Congratulations to Yanbin Xu on his graduation from UVA! Yanbin will start his PhD studies at the University of Miami.
+		</p>
+	</div>
+</div>
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
@@ -1198,7 +1209,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: April 24, 2025</p>
+<p align="right">Last modified: May 12, 2025</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
